<resources>
    <string name="app_name">HabitTracker</string>
    <string name="navigation_habit">Habit</string>
    <string name="navigation_habitEvent">Habit Event</string>
    <string name="navigation_homePage">Home Page</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_following">Following</string>
    <string name="habit_event_edit">Habit Event - Edit</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="camera">Camera</string>
    <string name="comment">Comment:</string>
    <string name="location">Location:</string>
    <string name="add_location">Your location info.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="location_information">Your location information is...</string>
    <string name="delete">Delete</string>
    <string name="delete_event">Delete Event</string>
    <string name="habit_title">Habit Title</string>
    <string name="start_date">start Date</string>
    <string name="frequency">Frequency</string>
    <string name="content">Content</string>
    <string name="reason">Reason</string>
    <string name="Return">return</string>
    <string name="to_do">To Do Today</string>
    <string name="done">Done(times needed)</string>
    <string name="choose_frequency">choose frequency</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="get_location">get location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>