<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/habit_title"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>

                <CheckBox
                    android:id="@+id/disclose_checkBox_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="right|center"
                    android:text="Public" />
            </LinearLayout>

            <EditText
                android:id="@+id/TitleInput"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:hint="Please enter the habit name"
                android:maxLength="20"
                android:ems="10"
                android:inputType="textCapWords"
                android:textColor="#000000"
                android:autofillHints="Please enter the habit name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/start_date"
                android:textSize="25sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/addDate_button"
                    android:layout_alignBottom="@+id/addDate_button"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/addDate_button"
                    android:autofillHints="Start date of habit"
                    android:hint="Start date of habit"
                    android:ems="10"
                    android:focusable="false"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/addDate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:text="Start Date" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/frequency"
                android:textSize="25sp"/>

            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="63dp">

                <EditText
                    android:id="@+id/frequencyInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="choose frequency first"
                    android:inputType="number"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frequency_type"
                    android:layout_alignTop="@+id/frequencyInput"
                    android:layout_alignBottom="@+id/frequencyInput"
                    android:layout_toEndOf="@+id/frequencyInput"
                    android:gravity="center_vertical"
                    android:text="@string/choose_frequency"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/frequency_spinner"
                    android:layout_width="34dp"
                    android:layout_height="61dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-16dp" />


            </RelativeLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/content"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/contentInput"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:autofillHints="Please enter the content of the habit"
                android:ems="10"
                android:hint="Please enter the content of the habit"
                android:textColor="#000000" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/reason"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/reasonInput"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:autofillHints="Please enter the reason of the habit"
                android:ems="10"
                android:hint="Please enter the reason of the habit"
                android:maxLength="30"
                android:textColor="#000000" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/habitEdit_return_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:text="@string/Return" />

                <Button
                    android:id= "@+id/habitEdit_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/confirm"/>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>